removed fonts, I don t know how to make them work anyway

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>ForBES</h1>
+        <h1 class="inset-text">ForBES</h1>
         <p>Generic and efficient MATLAB solver for nonsmooth convex optimization problems</p>
         <p class="view"><a href="https://github.com/lostella/ForBES">View the Project on GitHub <small>lostella/ForBES</small></a></p>
         <ul>
