first MathJax attempt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script type="text/javascript"
+        src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -80,7 +83,7 @@ these structures. Output <code>out</code> will contain the results of the optimi
 
 <p align="center"><img src="figures/minfbe_problem.png" alt="Convex composite problem"></p>
 
-<p>where <em>f1</em> is convex quadratic, <em>l</em> is a linear term and <em>f2</em> is any convex, twice continuously
+<p>where \\( f_1 \\) is convex quadratic, <em>l</em> is a linear term and <em>f2</em> is any convex, twice continuously
 differentiable function with Lipschitz continuous gradient. Any of these terms may be omitted in the
 problem definition, in which case it is assumed to be identically zero.
 Function <em>g</em> is a general proper, closed, convex function (possibly nonsmooth).
