fancier headers and code sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ applied to a Lasso problem with 3K observations and 500K features, for a total o
 <img src="figures/lasso_random_3e3_5e5_lambda_3e-1_noborder.png" width="640" height="404">
 </p>
 
-<h2>
+<h2 class="inset-text">
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>Simply click on one of the links on top of the page, and either clone the GitHub repository or uncompress the
@@ -57,7 +57,7 @@ the directory of ForBES. Compile all the <em>mex</em>-files required by simply h
 <pre><code>&gt; make
 </code></pre>
 
-<h2>
+<h2 class="inset-text">
 <a id="how-to-use-it" class="anchor" href="#how-to-use-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use it</h2>
 
 <p>ForBES consists mainly of two MATLAB routines, <code>minfbe</code> and <code>miname</code>.
@@ -79,7 +79,7 @@ these structures. Output <code>out</code> will contain the results of the optimi
 &gt; help miname
 </code></pre>
 
-<h2>
+<h2 class="inset-text">
 <a id="minfbe-convex-composite-problems" class="anchor" href="#minfbe-convex-composite-problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>minfbe (convex composite problems)</h2>
 
 <p>We consider here problems in the form</p>
@@ -269,7 +269,7 @@ Notice that <strong>most of them are optional</strong>.</p>
 </tbody>
 </table>
 
-<h2>
+<h2 class="inset-text">
 <a id="miname-convex-separable-problems" class="anchor" href="#miname-convex-separable-problems" aria-hidden="true"><span class="octicon octicon-link"></span></a>miname (convex separable problems)</h2>
 
 <p>We consider now problems with linear equality constraints, of the following form:</p>
@@ -404,7 +404,7 @@ Again, notice that <strong>many of them are optional</strong>.</p>
 </tbody>
 </table>
 
-<h2>
+<h2 class="inset-text">
 <a id="options" class="anchor" href="#options" aria-hidden="true"><span class="octicon octicon-link"></span></a>Options</h2>
 
 <p>Optional settings may be enabled by specifying the correspondent fields in the <code>opt</code> structure passed
@@ -454,7 +454,7 @@ as second argument to <code>minfbe</code> and <code>miname</code>.</p>
 </tbody>
 </table>
 
-<h2>
+<h2 class="inset-text">
 <a id="credits" class="anchor" href="#credits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Credits</h2>
 
 <p>ForBES is developed by Lorenzo Stella [<code>lorenzo.stella-at-imtlucca.it</code>] and Panos Patrinos [<code>panagiotis.patrinos-at-imtlucca.it</code>]. Any feedback, bug report or suggestion for future improvements is more than welcome. We recommend using the <a href="https://github.com/lostella/ForBES/issues">issue tracker</a> on GitHub to report bugs.</p>
