fixed a couple of links

--- a/index.html
+++ b/index.html
@@ -457,7 +457,10 @@ as second argument to <code>minfbe</code> and <code>miname</code>.</p>
 <h2 class="inset-text">
 <a id="credits" class="anchor" href="#credits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Credits</h2>
 
-<p>ForBES is developed by Lorenzo Stella [<code>lorenzo.stella-at-imtlucca.it</code>] and Panos Patrinos [<code>panagiotis.patrinos-at-imtlucca.it</code>]. Any feedback, bug report or suggestion for future improvements is more than welcome. We recommend using the <a href="https://github.com/lostella/ForBES/issues">issue tracker</a> on GitHub to report bugs.</p>
+<p>ForBES is developed by Lorenzo Stella [<code>lorenzo.stella-at-imtlucca.it</code>] and Panos Patrinos [<code>panagiotis.patrinos-at-imtlucca.it</code>]
+at <a href="http://www.imtlucca.it" target="_blank">IMT Lucca</a>.
+Any feedback, bug report or suggestion for future improvements is more than welcome.
+We recommend using the <a href="https://github.com/lostella/ForBES/issues" target="_blank">issue tracker</a> on GitHub to report bugs.</p>
       </section>
     </div>
     <footer>
